--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       "react/no-array-index-key": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
+      "react/prop-types": "off",
       "no-unused-expressions": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "import/prefer-default-export": "off",
